--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,62 @@ body {
   text-decoration: underline;
 }
 
+.slick-prev {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.08);
+  border-radius: 50%;
+  background-color: #fff;
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+  left: -10px;
+  transition: 0.3s;
+}
+.slick-prev::before {
+  content: "";
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  background-image: url(../../img/btn-prev.png);
+  background-position: 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: 0.3s;
+}
+.slick-prev:hover {
+  background-color: #18a0c6;
+}
+.slick-prev:hover::before {
+  filter: brightness(0) invert(1);
+}
+
+.slick-next {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.08);
+  border-radius: 50%;
+  background-color: #fff;
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+  right: -10px;
+  transition: 0.3s;
+}
+.slick-next::before {
+  content: "";
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  background-image: url(../../img/btn-next.png);
+  background-position: 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: 0.3s;
+}
+.slick-next:hover {
+  background-color: #18a0c6;
+}
+.slick-next:hover::before {
+  filter: brightness(0) invert(1);
+}
+
 header {
   width: 100%;
   position: fixed;
@@ -423,60 +479,6 @@ footer .footer__copyright .footer__lttin a {
 .bestseller .bestseller__content #gadgetsTabContent .bestseller__card {
   text-decoration: none;
 }
-.bestseller .bestseller__content #gadgetsTabContent .slick-prev {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.08);
-  border-radius: 50%;
-  background-color: #fff;
-  width: 40px;
-  height: 40px;
-  z-index: 1;
-  left: -15px;
-  transition: 0.3s;
-}
-.bestseller .bestseller__content #gadgetsTabContent .slick-prev::before {
-  content: "";
-  display: inline-block;
-  width: 19px;
-  height: 19px;
-  background-image: url(../../img/btn-prev.png);
-  background-position: 50%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transition: 0.3s;
-}
-.bestseller .bestseller__content #gadgetsTabContent .slick-prev:hover {
-  background-color: #18a0c6;
-}
-.bestseller .bestseller__content #gadgetsTabContent .slick-prev:hover::before {
-  filter: brightness(0) invert(1);
-}
-.bestseller .bestseller__content #gadgetsTabContent .slick-next {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.08);
-  border-radius: 50%;
-  background-color: #fff;
-  width: 40px;
-  height: 40px;
-  z-index: 1;
-  right: -15px;
-  transition: 0.3s;
-}
-.bestseller .bestseller__content #gadgetsTabContent .slick-next::before {
-  content: "";
-  display: inline-block;
-  width: 19px;
-  height: 19px;
-  background-image: url(../../img/btn-next.png);
-  background-position: 50%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transition: 0.3s;
-}
-.bestseller .bestseller__content #gadgetsTabContent .slick-next:hover {
-  background-color: #18a0c6;
-}
-.bestseller .bestseller__content #gadgetsTabContent .slick-next:hover::before {
-  filter: brightness(0) invert(1);
-}
 .bestseller .bestseller__content .bestseller__showAll {
   display: flex;
   justify-content: center;
@@ -670,11 +672,61 @@ footer .footer__copyright .footer__lttin a {
   background-color: #18a0c6;
 }
 
+.btn--addCart {
+  padding: 8px 0;
+  background-color: #1e1e1e;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 5px;
+  border: none;
+  transition: 0.2s;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  border-radius: 50px;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.btn--addCart:hover {
+  color: #fff;
+  background-color: #18a0c6;
+}
+
+.btn--installment1,
+.btn--installment2 {
+  padding: 10px 0;
+  background-color: #f7f7f7;
+  color: #111518;
+  font-size: 14px;
+  font-weight: 500;
+  border-radius: 5px;
+  border: none;
+  transition: 0.2s;
+  text-align: center;
+  text-decoration: none;
+  flex: 1;
+  border-radius: 5px;
+}
+.btn--installment1:hover,
+.btn--installment2:hover {
+  color: #fff;
+  background-color: #18a0c6;
+}
+.btn--installment1:hover .btn-des,
+.btn--installment2:hover .btn-des {
+  color: #fff !important;
+  opacity: 0.7;
+}
+
 .card {
   width: 240px;
   height: 290px;
   margin-left: 5px;
   padding: 15px 20px 10px;
+  border: none;
+  transition: 0.3s;
 }
 .card img {
   width: 100%;
@@ -715,6 +767,9 @@ footer .footer__copyright .footer__lttin a {
   color: #999;
   font-weight: 500;
   text-decoration: line-through;
+}
+.card:hover {
+  box-shadow: 0 10px 20px -10px rgba(0, 0, 0, 0.1);
 }
 .card:hover img {
   transform: scale(1.075);
@@ -891,7 +946,7 @@ footer .footer__copyright .footer__lttin a {
 }
 .productIntro .productIntro__navBar ul {
   list-style: none;
-  padding: 10px 0;
+  padding: 15px 0;
   margin: 0;
   display: flex;
 }
@@ -923,9 +978,11 @@ footer .footer__copyright .footer__lttin a {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 5px;
 }
 .productIntro .productIntro__info .row {
   width: 100%;
+  height: 95%;
 }
 .productIntro .productIntro__info .row .col-5,
 .productIntro .productIntro__info .row .col-7 {
@@ -934,13 +991,13 @@ footer .footer__copyright .footer__lttin a {
 .productIntro .productIntro__info .productIntro__slick {
   position: relative;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .productIntro .productIntro__info .productIntro__slick .productIntro__promotion {
   position: absolute;
   top: 3px;
-  left: 85px;
+  left: 90px;
   padding: 3px 15px;
   font-size: 13px;
   border-radius: 5px;
@@ -962,10 +1019,15 @@ footer .footer__copyright .footer__lttin a {
   background-color: #f7f7f7;
   border-radius: 5px;
   transition: 0.3s;
+  box-shadow: none;
 }
 .productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next:hover,
 .productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev:hover {
   background-color: #e6e6e6;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next:hover::before,
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev:hover::before {
+  filter: none;
 }
 .productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev {
   top: 7px;
@@ -973,6 +1035,7 @@ footer .footer__copyright .footer__lttin a {
   z-index: 2;
 }
 .productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev::before {
+  opacity: 1;
   content: "";
   background-image: url(../../img/btn-up.png);
   display: inline-block;
@@ -988,6 +1051,7 @@ footer .footer__copyright .footer__lttin a {
   right: 0px;
 }
 .productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next::before {
+  opacity: 1;
   content: "";
   background-image: url(../../img/btn-down.png);
   display: inline-block;
@@ -1018,10 +1082,193 @@ footer .footer__copyright .footer__lttin a {
   overflow: hidden;
 }
 .productIntro .productIntro__info .productIntro__slick .productIntro__slide .slide--item a {
+  display: inline-block;
   width: 390px;
   height: 390px;
 }
 .productIntro .productIntro__info .productIntro__slick .productIntro__slide .slide--item a img {
   width: 100%;
   height: 100%;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__des {
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  padding-left: 75px;
+}
+.productIntro .productIntro__info .productIntro__slick .productIntro__des span {
+  color: #999;
+  font-style: italic;
+}
+.productIntro .productIntro__info .productIntro__detail .row {
+  width: unset;
+  height: unset;
+}
+.productIntro .productIntro__info .productIntro__detail .row .col-5,
+.productIntro .productIntro__info .productIntro__detail .row .col-7 {
+  padding: 0 12px;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__top {
+  font-size: 14px;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px dashed #e6e6e6;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__top h1 {
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__top .productIntro__below {
+  display: flex;
+  align-items: center;
+  color: #999;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__top .productIntro__below .productIntro__brand {
+  margin-right: 15px;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__top .productIntro__below .productIntro__brand a {
+  text-decoration: none;
+  color: #111518;
+  transition: 0.2s;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__top .productIntro__below .productIntro__brand a:hover {
+  color: #18a0c6;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__top .productIntro__below .productIntro__code {
+  font-weight: 700;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__price {
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px dashed #e6e6e6;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__price .price-new {
+  font-size: 18px;
+  color: #f44336;
+  font-weight: 700;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__price .price-old {
+  font-size: 14px;
+  color: #999;
+  font-weight: 700;
+  font-style: italic;
+  text-decoration: line-through;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__price .price-des {
+  font-size: 13px;
+  color: #999;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__guarantee {
+  font-size: 14px;
+  color: #666;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px dashed #e6e6e6;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__guarantee a {
+  text-decoration: none;
+  color: #18a0c6;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__option {
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px dashed #e6e6e6;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__btn {
+  display: flex;
+  flex-wrap: wrap;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__btn .btn--installment2 {
+  margin-left: 10px;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__btn .btn-des {
+  font-size: 12px;
+  color: #999;
+  font-weight: 400;
+  transition: 0.2s;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support {
+  padding: 10px;
+  padding-left: 15px;
+  border: 1px dashed #e6e6e6;
+  border-radius: 5px;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support .support-title {
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support .support-title a {
+  text-decoration: none;
+  color: #111518;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 5px;
+  font-size: 13px;
+  color: #666;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support ul li {
+  padding-left: 15px;
+  position: relative;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support ul li::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 13px;
+  height: 19px;
+  background-image: url(../../img/check-circle-green.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support .support-free {
+  font-size: 14px;
+  margin-bottom: 5px;
+  font-weight: 700;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support .support-img {
+  display: flex;
+}
+.productIntro .productIntro__info .productIntro__detail .productIntro__support .support-img img {
+  height: 30px;
+  margin-right: 10px;
+}
+.productIntro .productIntro__space {
+  padding: 15px 0;
+  background-color: #f7f7f7;
+}
+.productIntro .productIntro__space .productIntro__other {
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 5px;
+}
+.productIntro .productIntro__space .productIntro__other .slick-next {
+  right: -5px;
+}
+.productIntro .productIntro__space .productIntro__other .slick-prev {
+  left: -5px;
+}
+.productIntro .productIntro__space .productIntro__other .other-title {
+  font-size: 16px;
+  font-weight: 500;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  position: relative;
+}
+.productIntro .productIntro__space .productIntro__other .other-title::before {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  z-index: 1;
+  width: 50px;
+  height: 2px;
+  background-color: #18a0c6;
 }/*# sourceMappingURL=main.css.map */
