--- a/sass/Components/_button.scss
+++ b/sass/Components/_button.scss
@@ -59,3 +59,33 @@
     @include hoverButton($color-white-0, $color-blue-1);
   }
 }
+
+.btn--addCart {
+  @include styleButton($pd-1, 0, $color-black-1, $color-white-0, $fs-1, $fw-2);
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  border-radius: 50px;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-bottom: $mg-2;
+  &:hover {
+    @include hoverButton($color-white-0, $color-blue-1);
+  }
+}
+
+.btn--installment1,
+.btn--installment2 {
+  @include styleButton($pd-5, 0, $color-white-4, $color-black-0, $fs-0, $fw-2);
+  text-align: center;
+  text-decoration: none;
+  flex: 1;
+  border-radius: $border-radius-1;
+  &:hover {
+    @include hoverButton($color-white-0, $color-blue-1);
+    .btn-des {
+      color: $color-white-0 !important;
+      opacity: 0.7;
+    }
+  }
+}
