--- a/sass/Components/_card.scss
+++ b/sass/Components/_card.scss
@@ -3,6 +3,8 @@
   height: 290px;
   margin-left: $mg-4;
   padding: $pd-0 $pd-4 $pd-5;
+  border: none;
+  transition: 0.3s;
   img {
     width: 100%;
     height: 65%;
@@ -44,6 +46,7 @@
     }
   }
   &:hover {
+    box-shadow: 0 10px 20px -10px rgba(0, 0, 0, 0.1);
     img {
       transform: scale(1.075);
     }
