--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -11,6 +11,7 @@ $color-white-4: #f7f7f7;
 $color-gray-0: #999;
 $color-gray-1: #e3e3e3;
 $color-gray-2: #e6e6e6;
+$color-gray-3: #666;
 $color-yellow-0: #ffc750;
 $color-purple-0: #7755ff;
 $color-purple-1: #4923e6;
@@ -21,6 +22,7 @@ $color-blue-2: rgba(24, 160, 198, 0.3);
 $color-blue-3: #3b5998;
 $color-red-0: #f77066;
 $color-red-1: #dd4c3b;
+$color-red-2: #f44336;
 
 // font-size
 $fs-0: 14px;
@@ -31,6 +33,7 @@ $fs-4: 12px;
 $fs-5: 18px;
 $fs-6: 30px;
 $fs-7: 35px;
+$fs-8: 25px;
 
 // font-weight
 $fw-0: 300;
