--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,5 +29,6 @@
 @import "./Pages/register";
 @import "./Pages/forgotPassword";
 @import "./Pages/detailProduct";
+@import "./Pages/admin";
 
 //Theme
