update UI website

--- a/css/main.css
+++ b/css/main.css
@@ -1027,39 +1027,6 @@ footer .footer__copyright .footer__lttin a {
   font-size: 14px;
 }
 
-.formInsertEdit {
-  padding: 15px 30px;
-  margin-bottom: 30px;
-  min-height: 700px;
-}
-.formInsertEdit .formInsertEdit__input {
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 15px;
-  background-color: #f3f5f7;
-  border: 2px solid #999;
-  border-radius: 5px;
-}
-.formInsertEdit .formInsertEdit__label {
-  font-weight: 500;
-  margin-bottom: 5px;
-}
-.formInsertEdit .btn-form {
-  display: inline-block;
-  border: 1px solid #666;
-  padding: 5px 10px;
-  margin-right: 5px;
-  text-decoration: none;
-  color: #fff;
-  font-weight: 500;
-  height: 35px;
-  border-radius: 5px;
-  background-color: #111518;
-}
-.formInsertEdit .formInsertEdit__btn {
-  margin-top: 10px;
-}
-
 .login .login__form form .login__content {
   margin-bottom: 5px;
 }
@@ -1524,200 +1491,9 @@ footer .footer__copyright .footer__lttin a {
   row-gap: 10px;
 }
 
-.main-admin .left-admin {
-  background-color: #111518;
-  padding: 0;
-}
-.main-admin .left-admin .logo-admin {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 75px;
-}
-.main-admin .left-admin .logo-admin img {
-  width: 70%;
-}
-.main-admin .left-admin .title-admin {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 65px;
-  color: #fff;
-  font-size: 17px;
-  text-transform: uppercase;
-  font-weight: 500;
-  border-top: 1px solid #1aaed7;
-  border-bottom: 1px solid #1aaed7;
-  padding: 8px 0;
-}
-.main-admin .left-admin .title-admin span {
-  margin-left: 10px;
-}
-.main-admin .left-admin .title-admin i {
-  color: #1aaed7;
-}
-.main-admin .left-admin .navbar-admin {
-  display: flex;
-  justify-content: center;
-}
-.main-admin .left-admin .navbar-admin ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  padding-top: 15px;
-}
-.main-admin .left-admin .navbar-admin ul li {
-  padding: 8px 0;
-  margin: 5px 0;
-}
-.main-admin .left-admin .navbar-admin ul li a {
-  text-decoration: none;
-  color: #fff;
-  transition: 0.3s;
-}
-.main-admin .left-admin .navbar-admin ul li a:hover {
-  color: #1aaed7;
-}
-.main-admin .left-admin .navbar-admin ul li a.active {
-  color: #1aaed7;
-}
-.main-admin .left-admin .navbar-admin ul li a span {
-  margin-left: 5px;
-  font-weight: 500;
-}
-.main-admin .left-admin .navbar-admin ul li a i {
-  width: 24px;
-}
-.main-admin .left-admin .btn-admin {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-.main-admin .right-admin {
-  padding: 0;
-}
-.main-admin .right-admin .header-admin {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 30px;
-  box-shadow: 0px 1px 5px #999;
-}
-.main-admin .right-admin .header-admin .header-form {
-  position: relative;
-}
-.main-admin .right-admin .header-admin .header-form input {
-  width: 390px;
-  padding: 8px 15px;
-  padding-right: 39px;
-  border: 2px solid #999;
-  border-radius: 20px;
-  font-size: 15px;
-}
-.main-admin .right-admin .header-admin .header-form input:focus {
-  outline: none;
-}
-.main-admin .right-admin .header-admin .header-form .header-search {
-  position: absolute;
-  right: 17px;
-  top: 9px;
-  border: none;
-  background-color: transparent;
-}
-.main-admin .right-admin .header-admin .header-form .header-search i {
-  font-size: 18px;
-}
-.main-admin .right-admin .header-admin .header-account .user-admin {
-  display: inline-block;
-  width: 45px;
-  height: 45px;
-  padding: 8px;
-  border: 1px solid #999;
-  border-radius: 50%;
-}
-.main-admin .right-admin .header-admin .header-account .user-admin::after {
-  content: unset;
-}
-.main-admin .right-admin .header-admin .header-account .user-admin img {
-  width: 100%;
-}
-.main-admin .right-admin .header-admin .header-account .dropdown-item {
-  font-size: 14px;
-  padding: 8px 15px;
-}
-.main-admin .right-admin .header-admin .header-account .dropdown-item i {
-  margin-right: 7px;
-}
-.main-admin .right-admin .content-admin {
-  min-height: 700px;
-  padding: 0 30px;
-}
-.main-admin .right-admin .content-admin .content-adminTop {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 20px;
-}
-.main-admin .right-admin .content-admin .content-adminBottom {
-  margin: 15px 0 40px;
-}
-.main-admin .right-admin .content-admin .content-adminBottom table,
-.main-admin .right-admin .content-admin .content-adminBottom th,
-.main-admin .right-admin .content-admin .content-adminBottom td {
-  border: 1px solid #e3e3e3;
-  border-collapse: collapse;
-  text-align: center;
-}
-.main-admin .right-admin .content-admin .content-adminBottom table {
-  width: 100%;
-}
-.main-admin .right-admin .content-admin .content-adminBottom table th {
-  padding: 15px 0;
-  text-transform: uppercase;
-  font-size: 16px;
-  background-color: #7ed6df;
-}
-.main-admin .right-admin .content-admin .content-adminBottom table td {
-  padding: 10px 0;
-}
-.main-admin .right-admin .content-admin .content-adminBottom table td .btns-admin {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.main-admin .right-admin .content-admin .content-adminBottom table .btnTd {
-  width: 13%;
-}
-.main-admin .right-admin .content-admin .content-adminBottom table .id-pd {
-  padding: 10px;
-}
-.main-admin .right-admin .footer-admin {
-  padding: 15px 30px;
-  display: flex;
-  align-items: center;
-  box-shadow: 1px 0px 5px #999;
-}
-.main-admin .right-admin .footer-admin .footer-logo img {
-  width: 130px;
-}
-.main-admin .right-admin .footer-admin .footer-copyright {
-  width: 90%;
-  text-align: center;
-}
-.main-admin .right-admin .footer-admin .footer-copyright .footer-lttin {
-  margin-bottom: 0;
-  font-size: 15px;
-}
-.main-admin .right-admin .footer-admin .footer-copyright .footer-lttin a {
-  text-decoration: none;
-  color: #18a0c6;
-  font-weight: 500;
-}
-
 .cart {
   background-color: #f7f7f7;
-  padding-top: 115px;
+  padding-top: 170px;
   padding-bottom: 30px;
 }
 .cart .cart__content {
@@ -1779,6 +1555,16 @@ footer .footer__copyright .footer__lttin a {
   font-size: 14px;
   font-weight: 500;
 }
+.cart .cart__content .cart__products .cart__item .cart__detail .cart__caption .cart__info .cart__sale {
+  padding: 2px 4px;
+  border-radius: 3px;
+  color: #fff;
+  background-color: #f77066;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 500;
+  margin-left: 10px;
+}
 .cart .cart__content .cart__products .cart__item .cart__detail .cart__caption .cart__info .cart__amount {
   font-size: 13px;
   margin-top: 5px;
@@ -1791,6 +1577,13 @@ footer .footer__copyright .footer__lttin a {
   width: 35px;
   margin-left: 3px;
   font-weight: 500;
+}
+.cart .cart__content .cart__products .cart__item .cart__detail .cart__caption .cart__price .price-old {
+  font-size: 15px;
+  font-weight: 500;
+  color: #999;
+  text-align: right;
+  text-decoration: line-through;
 }
 .cart .cart__content .cart__products .cart__item .cart__detail .cart__caption .cart__price .price-new {
   font-size: 15px;
