--- a/sass/Pages/_cart.scss
+++ b/sass/Pages/_cart.scss
@@ -1,6 +1,6 @@
 .cart {
   background-color: #f7f7f7;
-  padding-top: 115px;
+  padding-top: 170px;
   padding-bottom: 30px;
   .cart__content {
     background-color: white;
@@ -59,6 +59,16 @@
                 font-size: 14px;
                 font-weight: 500;
               }
+              .cart__sale {
+                padding: 2px 4px;
+                border-radius: $border-radius-1 - 2;
+                color: $color-white-0;
+                background-color: $color-red-0;
+                text-align: center;
+                font-size: $fs-4 - 1;
+                font-weight: $fw-2;
+                margin-left: $mg-2;
+              }
               .cart__amount {
                 font-size: 13px;
                 margin-top: 5px;
@@ -74,6 +84,13 @@
               }
             }
             .cart__price {
+              .price-old {
+                font-size: 15px;
+                font-weight: 500;
+                color: $color-gray-0;
+                text-align: right;
+                text-decoration: line-through;
+              }
               .price-new {
                 font-size: 15px;
                 font-weight: 700;
