--- a/sass/Pages/_detailProduct.scss
+++ b/sass/Pages/_detailProduct.scss
@@ -61,7 +61,7 @@
           &::before {
             opacity: 1;
             content: "";
-            background-image: url(../../img/btn-up.png);
+            background-image: url(../../Gadgets/img/btn-up.png);
             display: inline-block;
             width: 18px;
             height: 18px;
@@ -77,7 +77,7 @@
           &::before {
             opacity: 1;
             content: "";
-            background-image: url(../../img/btn-down.png);
+            background-image: url(../../Gadgets/img/btn-down.png);
             display: inline-block;
             width: 18px;
             height: 18px;
