--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body {
   display: inline-block;
   width: 19px;
   height: 19px;
-  background-image: url(../../img/btn-prev.png);
+  background-image: url(../../Gadgets/img/btn-prev.png);
   background-position: 50%;
   background-size: contain;
   background-repeat: no-repeat;
@@ -59,7 +59,7 @@ body {
   display: inline-block;
   width: 19px;
   height: 19px;
-  background-image: url(../../img/btn-next.png);
+  background-image: url(../../Gadgets/img/btn-next.png);
   background-position: 50%;
   background-size: contain;
   background-repeat: no-repeat;
@@ -1204,7 +1204,7 @@ footer .footer__copyright .footer__lttin a {
 .productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev::before {
   opacity: 1;
   content: "";
-  background-image: url(../../img/btn-up.png);
+  background-image: url(../../Gadgets/img/btn-up.png);
   display: inline-block;
   width: 18px;
   height: 18px;
@@ -1220,7 +1220,7 @@ footer .footer__copyright .footer__lttin a {
 .productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next::before {
   opacity: 1;
   content: "";
-  background-image: url(../../img/btn-down.png);
+  background-image: url(../../Gadgets/img/btn-down.png);
   display: inline-block;
   width: 18px;
   height: 18px;
