--- a/css/main.css
+++ b/css/main.css
@@ -16,60 +16,31 @@ body {
   text-decoration: underline;
 }
 
-.slick-prev {
+.gadget-btnSlick {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.08);
   border-radius: 50%;
   background-color: #fff;
   width: 40px;
   height: 40px;
+  border: none;
   z-index: 1;
   left: -10px;
   transition: 0.3s;
 }
-.slick-prev::before {
-  content: "";
-  display: inline-block;
-  width: 19px;
-  height: 19px;
-  background-image: url(../../Gadgets/img/btn-prev.png);
-  background-position: 50%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transition: 0.3s;
-}
-.slick-prev:hover {
+.gadget-btnSlick:hover {
   background-color: #18a0c6;
-}
-.slick-prev:hover::before {
-  filter: brightness(0) invert(1);
 }
 
-.slick-next {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.08);
-  border-radius: 50%;
-  background-color: #fff;
-  width: 40px;
-  height: 40px;
-  z-index: 1;
-  right: -10px;
-  transition: 0.3s;
+.btn-prev {
+  position: absolute;
+  right: 0;
+  top: 45%;
 }
-.slick-next::before {
-  content: "";
-  display: inline-block;
-  width: 19px;
-  height: 19px;
-  background-image: url(../../Gadgets/img/btn-next.png);
-  background-position: 50%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transition: 0.3s;
-}
-.slick-next:hover {
-  background-color: #18a0c6;
-}
-.slick-next:hover::before {
-  filter: brightness(0) invert(1);
+
+.btn-next {
+  position: absolute;
+  top: 45%;
+  left: 97.7%;
 }
 
 header {
@@ -1179,54 +1150,29 @@ footer .footer__copyright .footer__lttin a {
   align-items: center;
   margin-right: 30px;
 }
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next,
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev {
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .gadget-btnNavSlick {
   width: 70px;
   height: 30px;
   background-color: #f7f7f7;
   border-radius: 5px;
   transition: 0.3s;
   box-shadow: none;
+  border: none;
 }
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next:hover,
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev:hover {
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .gadget-btnNavSlick:hover {
   background-color: #e6e6e6;
 }
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next:hover::before,
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev:hover::before {
-  filter: none;
-}
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev {
-  top: 7px;
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .btn-up {
+  position: absolute;
+  top: -10px;
   left: 0px;
   z-index: 2;
 }
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-prev::before {
-  opacity: 1;
-  content: "";
-  background-image: url(../../Gadgets/img/btn-up.png);
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next {
+.productIntro .productIntro__info .productIntro__slick .productIntro__nav .btn-down {
+  position: absolute;
   top: unset;
-  bottom: -25px;
+  bottom: -10px;
   right: 0px;
-}
-.productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-next::before {
-  opacity: 1;
-  content: "";
-  background-image: url(../../Gadgets/img/btn-down.png);
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 .productIntro .productIntro__info .productIntro__slick .productIntro__nav .slick-list {
   padding: 0 !important;
